update config11 admin

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,6 +1,5 @@
 backend:
-  name: github
-  repo: Fiallos77/analityka-porfolio
+  name: git-gateway
   branch: main
 
 media_folder: "public/images"
