--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,6 +1,9 @@
 backend:
-  name: git-gateway
+  name: github
+  repo: Fiallos77/analityka-porfolio
   branch: main
+  base_url: https://api.netlify.com
+  auth_endpoint: auth
 
 media_folder: "public/images"
 public_folder: "/images"
